fix: increase logo on mobile, increase language toggler  on mobile

--- a/src/assets/scss/parts/_header.scss
+++ b/src/assets/scss/parts/_header.scss
@@ -1,5 +1,5 @@
 .header-logo {
-  font-size: rem(20);
+  font-size: rem(26);
   @include breakpoint(medium) {
     font-size: rem(38);
   }
@@ -25,4 +25,13 @@ header {
 .header-phone {
   font-weight: 700;
   font-size: rem(16);
+}
+
+.language-toggle {
+  font-size: rem(16);
+  margin-top: rem(5);
+  @include breakpoint(medium) {
+    margin-top: 0;
+    font-size: rem(14);
+  }
 }
